Tue Dec  9 07:40:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* tests/Bug_1482_Regression/test.mpc:
        * tests/Bug_1551_Regression/test.mpc:
          Fixed errors in these mpc files

Mon Dec  8 21:13:44 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/performance-tests/LoadBalancing/Roundtrip.cpp:

	  Include "ace/ACE.h" to pull in ACE::is_prime() prototype.

	* orbsvcs/performance-tests/LoadBalancing/server.cpp:

	  Include "ace/OS_NS_strings.h" to pull in ACE_OS::strcasecmp()
	  prototype.

Mon Dec  8 19:44:04 UTC 2003  Don Hinton  <dhinton@dresystems.com>

        * rules.tao.GNU:
          Only set SOVERSION and SONAME if versioned_so=1 and they have
          not yet been set.  Thanks to Milan Cvetkovic
          <mcvetkovic@mpathix.com> for motivating this change.

Mon Dec  8 19:33:03 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Synch_Invocation.cpp:

	  Fixed a minor problem with reinvocation. We were not handling
	  errors properly, more precisely the retsrat errors if they show
	  up during wait_for_reply (). Thanks to Milan Cvetkovic for
	  motivating this change.

	* tao/Messaging/Asynch_Invocation.cpp:

	  Cosmetic change.

Mon Dec  8 18:50:58 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/ast/ast_decl.cpp:

          Cosmetic changes to source code.

        * TAO_IDL/be/be_visitor_operation/operation.cpp:

          In generating the operation string name passed to the
          TAO::Invocation_Adapter constructor in stub code, changed
          the call to get the operation node's local name from
          local_name() to original_local_name(). This call returns a
          string without the '_cxx_' prepended (if any) that would
          occur if the operation name clashes with a C++ keyword. The
          name string must be passed to the transport without the
          prefix so it can be language independent, and for this